--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Skeleton: Responsive CSS Boilerplate</title>
+  <title>Doc's Records and Vintage</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -41,8 +41,7 @@
     <div class="container">
       <div class="row">
         <div class="one-half column">
-          <h4 class="hero-heading">Stop coding non-responsive sites. Let users view sites from anywhere.</h4>
-          <a class="button button-primary" href="http://getskeleton.com">Try Skeleton</a>
+          <h4 class="hero-heading">Get Your Fix At Docs</h4>
         </div>
         <div class="one-half column phones">
           <img class="phone" src="images/iphone.png">
@@ -55,20 +54,13 @@
   <div class="section values">
     <div class="container">
       <div class="row">
-        <div class="one-third column value">
-          <h2 class="value-multiplier">67%</h2>
-          <h5 class="value-heading">Purchase Increase</h5>
-          <p class="value-description">Percentage of users more likely to purchase on mobile friendly site.</p>
+        <div class="one-half column value">
+          <h5 class="value-heading">Music</h5>
+          <p class="value-description">Huge selection of Records, CDs, Cassettes, 8tracks and more.</p>
         </div>
-        <div class="one-third column value">
-          <h2 class="value-multiplier">90%</h2>
-          <h5 class="value-heading">Multi-device Users</h5>
-          <p class="value-description">Most of the world accesses the internet on multiple devices.</p>
-        </div>
-        <div class="one-third column value">
-          <h2 class="value-multiplier">66%</h2>
-          <h5 class="value-heading">Sad Users</h5>
-          <p class="value-description">Percentage of users that are frustrated with page load times.</p>
+        <div class="one-half column value">
+          <h5 class="value-heading">Vintage</h5>
+          <p class="value-description">Clothing, Concert shirts, Furniture, Stereo Equipment and Memorabilia.</p>
         </div>
       </div>
     </div>
@@ -76,9 +68,9 @@
 
   <div class="section get-help">
     <div class="container">
-      <h3 class="section-heading">Need help getting started?</h3>
-      <p class="section-description">Skeleton is an amazingly easy place to start with responsive development. If you want to learn more, just visit the documentation!</p>
-      <a class="button button-primary" href="http://getskeleton.com">View Skeleton Docs</a>
+      <h3 class="section-heading">Have something to sell?</h3>
+      <p class="section-description">WE BUY RECORDS! We are also interested in CDs, Cassettes, 8tracks, Posters, Vintage Clothing, Concert T-Shirts, Vintage Furniture and Housewares, Toys, Comic Books, Board Games, Pop Culture and Music, Memorabilia, Oddball, Art, and Oddies.</p>
+      <p class="section-description">Please call: <a href="tel:817-732-5455">(817) 732-5455</a></p>
     </div>
   </div>
 
@@ -88,15 +80,21 @@
       <p class="section-description">Skeleton images sit easily in grid with .u-max-full-width class. I suggest exploring solution to serving different images based on device size.</p>
       <div class="row">
         <div class="one-half column category">
-          <img class="u-max-full-width" src="images/placeholder.png">
+          <img class="u-max-full-width" src="images/facebook.png">
         </div>
         <div class="one-half column category">
-          <img class="u-max-full-width" src="images/placeholder.png">
+          <img class="u-max-full-width" src="images/instagram.png">
         </div>
       </div>
     </div>
   </div>
 
+  <div class="section get-help">
+    <div class="container">
+      <h3 class="section-heading">Location and Contact</h3>
+      <p class="section-description">2632 Weisenberger<br />Fort Worth, Texas<br />Phone: <a href="tel:817-732-5455">(817) 732-5455</a></p>
+    </div>
+  </div>
 
 
 
