Add apple icon, updated favicon, removed unneeded files

--- a/test.html
+++ b/test.html
@@ -5,8 +5,8 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Skeleton: Responsive CSS Boilerplate</title>
-  <meta name="description" content="">
+  <title>Doc's Records and Vintage</title>
+  <meta name="description" content="Over 20,000 records in stock. Rock, Blues, Jazz, R&B, Punk, Metal, Rockabilly, Easy Listening, etc. etc. We also carry Vintage clothing and memorabilia, with plenty one-of-a-xkind oddball items.">
   <meta name="author" content="Ryan Bailey">
 
   <!-- Mobile Specific Metas
@@ -31,6 +31,10 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="dist/images/favicon.png">
 
+  <!-- iOS icon
+  -->
+  <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+
 </head>
 <body>
 
@@ -44,8 +48,7 @@
           <h4 class="hero-heading">Get Your Fix At Docs</h4>
         </div>
         <div class="one-half column phones">
-          <img class="phone" src="images/iphone.png">
-          <img class="phone" src="images/iphone.png">
+          <img class="phone" src="images/docsrecords.png">
         </div>
       </div>
     </div>
@@ -76,14 +79,16 @@
 
   <div class="section categories">
     <div class="container">
-      <h3 class="section-heading">Responsive Images</h3>
-      <p class="section-description">Skeleton images sit easily in grid with .u-max-full-width class. I suggest exploring solution to serving different images based on device size.</p>
+      <h3 class="section-heading">Follow us online</h3>
       <div class="row">
-        <div class="one-half column category">
-          <img class="u-max-full-width" src="images/facebook.png">
+        <div class="one-third column category">
+          <a href=""><img class="u-max-full-width" src="images/facebook.png"></a>
         </div>
-        <div class="one-half column category">
-          <img class="u-max-full-width" src="images/instagram.png">
+        <div class="one-third column category">
+          <img class="u-max-full-width" src="images/instagram.png"></a>
+        </div>
+        <div class="one-third column category">
+          <a href="https://twitter.com/docsrecords"><img class="u-max-full-width" src="images/twitter.png"></a>
         </div>
       </div>
     </div>
