--- a/test.html
+++ b/test.html
@@ -45,7 +45,7 @@
     <div class="container">
       <div class="row">
         <div class="one-half column">
-          <h4 class="hero-heading">Get Your Fix At Docs</h4>
+          <img class="phone" src="images/docs-logo.png">
         </div>
         <div class="one-half column phones">
           <img class="phone" src="images/docsrecords.png">
