FIRE ZE MISSILES!!!!!

--- a/index.html
+++ b/index.html
@@ -1,8 +1,109 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>Docs Records and Vintage</title>
+
+  <!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta charset="utf-8">
+  <title>Doc's Records and Vintage</title>
+  <meta name="description" content="Over 20,000 records in stock. Rock, Blues, Jazz, R&B, Punk, Metal, Rockabilly, Easy Listening, etc. etc. We also carry Vintage clothing and memorabilia, with plenty one-of-a-xkind oddball items.">
+  <meta name="author" content="Ryan Bailey">
+
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
+
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="dist/css/normalize.css">
+  <link rel="stylesheet" href="dist/css/skeleton.css">
+  <link rel="stylesheet" href="css/custom-page.css">
+
+  <!-- Scripts
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+  <!-- Favicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="dist/images/favicon.png">
+
+  <!-- iOS icon
+  -->
+  <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+
 </head>
 <body>
-Coming Soon
+
+  <!-- Primary Page Layout
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+
+  <div class="section hero">
+    <div class="container">
+      <div class="row">
+        <div class="one-half column">
+          <img class="phone" src="images/docs-logo.png">
+        </div>
+        <div class="one-half column phones">
+          <img class="phone" src="images/docsrecords.png">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="section values">
+    <div class="container">
+      <div class="row">
+        <div class="one-half column value">
+          <h5 class="value-heading">Music</h5>
+          <p class="value-description">Huge selection of Records, CDs, Cassettes, 8tracks and more.</p>
+        </div>
+        <div class="one-half column value">
+          <h5 class="value-heading">Vintage</h5>
+          <p class="value-description">Clothing, Concert shirts, Furniture, Stereo Equipment and Memorabilia.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="section get-help">
+    <div class="container">
+      <h3 class="section-heading">Have something to sell?</h3>
+      <p class="section-description">WE BUY RECORDS! We are also interested in CDs, Cassettes, 8tracks, Posters, Vintage Clothing, Concert T-Shirts, Vintage Furniture and Housewares, Toys, Comic Books, Board Games, Pop Culture and Music, Memorabilia, Oddball, Art, and Oddies.</p>
+      <p class="section-description">Please call: <a href="tel:817-732-5455">(817) 732-5455</a></p>
+    </div>
+  </div>
+
+  <div class="section categories">
+    <div class="container">
+      <h3 class="section-heading">Follow us online</h3>
+      <div class="row">
+        <div class="one-third column category">
+          <a href="https://www.facebook.com/docsrecords/"><img class="u-max-full-width" src="images/facebook.png"></a>
+        </div>
+        <div class="one-third column category">
+          <a href="https://www.instagram.com/docs_records/"><img class="u-max-full-width" src="images/instagram.png"></a>
+        </div>
+        <div class="one-third column category">
+          <a href="https://twitter.com/docsrecords"><img class="u-max-full-width" src="images/twitter.png"></a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="section get-help">
+    <div class="container">
+      <h3 class="section-heading">Location and Contact</h3>
+      <p class="section-description">2632 Weisenberger<br />Fort Worth, Texas<br />Phone: <a href="tel:817-732-5455">(817) 732-5455</a></p>
+    </div>
+  </div>
+
+
+
+<!-- End Document
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 </html>
