New background photo update, copy update

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <div class="section get-help">
     <div class="container">
       <h3 class="section-heading">Have something to sell?</h3>
-      <p class="section-description">WE BUY RECORDS! We are also interested in CDs, Cassettes, 8tracks, Posters, Vintage Clothing, Concert T-Shirts, Vintage Furniture and Housewares, Toys, Comic Books, Board Games, Pop Culture and Music, Memorabilia, Oddball, Art, and Oddies.</p>
+      <p class="section-description">WE BUY RECORDS! We are also interested in CDs, Cassettes, 8tracks, Posters, Vintage Clothing, Concert T-Shirts, Vintage Furniture and Housewares, Toys, Comic Books, Board Games, Pop Culture and Music Memorabilia, Oddball, Art, and Oddities.</p>
       <p class="section-description">Please call: <a href="tel:817-732-5455">(817) 732-5455</a></p>
     </div>
   </div>
@@ -97,7 +97,7 @@
   <div class="section get-help">
     <div class="container">
       <h3 class="section-heading">Location and Contact</h3>
-      <p class="section-description">2628 Weisenberger<br />Fort Worth, Texas<br />Phone: <a href="tel:817-732-5455">(817) 732-5455</a></p>
+      <p class="section-description">2628 Weisenberger St<br />Fort Worth, Texas 76107<br />Phone: <a href="tel:817-732-5455">(817) 732-5455</a><br />Email: <a href="mailto:jenkins@docsrecords.com">jenkins@docsrecords.com</a></p>
     </div>
   </div>
 
