Update to known, working email

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <div class="section get-help">
     <div class="container">
       <h3 class="section-heading">Location and Contact</h3>
-      <p class="section-description">2628 Weisenberger St<br />Fort Worth, Texas 76107<br />Phone: <a href="tel:817-732-5455">(817) 732-5455</a><br />Email: <a href="mailto:jenkins@docsrecords.com">jenkins@docsrecords.com</a></p>
+      <p class="section-description">2628 Weisenberger St<br />Fort Worth, Texas 76107<br />Phone: <a href="tel:817-732-5455">(817) 732-5455</a><br />Email: <a href="mailto:docsrecordsandvintage@yahoo.com">docsrecordsandvintage@yahoo.com</a></p>
     </div>
   </div>
 
